--- a/templates/intro.html
+++ b/templates/intro.html
@@ -5,31 +5,30 @@
 	<h5>Like, who are these people? What are they going to teach me? When can I go eat breakfast?</h5>
 	<h5>Let's answer those questions...</h5>
 </div>
-<!-- <div id="aboutUs" class="container">
-	<div class="featurette aboutOne">
-		<img class="featurette-image pull-left aboutImg" src="img/katrina.jpg">
-		<h2 class="featurette-heading">Katrina</h2>
-		<div class="lead">Hello I'm Katrina</div>
+<div id="aboutUs" class="container marketing">
+	<div class="row">
+		<div class="col-xs-3 eachSec eachSec">
+			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/katrina.jpg">
+			<h2>Katrina</h2>
+			<div>Hello I'm Katrina</div>
+		</div>
+		<div class="col-xs-3 eachSec">
+			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/julian.jpg">
+			<h2>Katrina</h2>
+			<div>Hello I'm Katrina</div>
+		</div>
+		<div class="col-xs-3 eachSec">
+			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/simon.jpg">
+			<h2>Katrina</h2>
+			<div>Hello I'm Katrina</div>
+		</div>
+		<div class="col-xs-3 eachSec">
+			<img class="img-circle aboutImg" src="img/james.jpg">
+			<h2>Katrina</h2>
+			<div>Hello I'm Katrina</div>
+		</div>
 	</div>
-	<hr class="featurette-divider">
-	<div class="featurette aboutOne">
-		<img class="featurette-image pull-right aboutImg" src="img/julian.jpg">
-		<h2 class="featurette-heading">Julian</h2>
-		<div class="lead">Hello I'm Julian</div>
-	</div>
-	<hr class="featurette-divider">
-	<div class="featurette aboutOne">
-		<img class="featurette-image pull-left aboutImg" src="img/james.jpg">
-		<h2 class="featurette-heading">James</h2>
-		<div class="lead">Hello I'm James</div>
-	</div>
-	<hr class="featurette-divider">
-	<div class="featurette aboutOne">
-		<img class="featurette-image pull-right aboutImg" src="img/simon.jpg">
-		<h2 class="featurette-heading">Simon</h2>
-		<div class="lead">Hello I'm Simon</div>
-	</div>
-</div> -->
+</div>
 <div id="shepherdIntro" class="container">
 	<h3>Alright, now that we've gotten that stuff out of the way let's get to what we're teaching. Shepherd.</h3>
 
