descriptions of jobs

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -1,3 +1,5 @@
+<!-- Introduce us. Introduce shepherd. Why is shepherd useful.
+	Live demo of little tool tips. -->
 <div id="header" class="container">
 	<h1>Sup guys</h1>
 	<h3>Today we're going to teach you some really cool stuff</h3>
