--- a/templates/intro.html
+++ b/templates/intro.html
@@ -1,5 +1,7 @@
 <!-- Introduce us. Introduce shepherd. Why is shepherd useful.
-	Live demo of little tool tips. -->
+	Live demo of little tool tips.
+	Julian - Feel fucking lucky I've done so much of this part for you.
+	Biiiitch. -->
 <div id="header" class="container">
 	<h1>Sup guys</h1>
 	<h3>Today we're going to teach you some really cool stuff</h3>
