--- a/templates/one.html
+++ b/templates/one.html
@@ -2,4 +2,5 @@
 	create github repo with starter code.
 	This should include an index.html with
 	all shepherd links included and a few divs.
-	Also put js, css and other needed files. -->
+	Also put js, css and other needed files.
+	Katrina -->
