some stuff and stuff

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -32,6 +32,30 @@
 			<div>Hello I'm Katrina</div>
 		</div>
 	</div>
+<div id="aboutUs" class="container">
+	<div class="featurette aboutOne">
+		<img class="featurette-image pull-left aboutImg" src="img/katrina.jpg">
+		<h2 class="featurette-heading">Katrina</h2>
+		<div class="lead">Hello I'm Katrina</div>
+	</div>
+	<hr class="featurette-divider">
+	<div class="featurette aboutOne">
+		<img class="featurette-image pull-right aboutImg" src="img/julian.jpg">
+		<h2 class="featurette-heading">Julian</h2>
+		<div class="lead">Hello I'm Julian</div>
+	</div>
+	<hr class="featurette-divider">
+	<div class="featurette aboutOne">
+		<img class="featurette-image pull-left aboutImg" src="img/james.jpg">
+		<h2 class="featurette-heading">James</h2>
+		<div class="lead">Hello I'm James</div>
+	</div>
+	<hr class="featurette-divider">
+	<div class="featurette aboutOne">
+		<img class="featurette-image pull-right aboutImg" src="img/simon.jpg">
+		<h2 class="featurette-heading">Simon</h2>
+		<div class="lead">Hello I'm Simon</div>
+	</div>
 </div>
 <div id="shepherdIntro" class="container">
 	<h3>Alright, now that we've gotten that stuff out of the way let's get to what we're teaching. Shepherd.</h3>
