added demo files

--- a/templates/one.html
+++ b/templates/one.html
@@ -4,3 +4,17 @@
 	all shepherd links included and a few divs.
 	Also put js, css and other needed files.
 	Katrina -->
+<div id="gettingStarted" class="container">
+	<h2>Alright! Let's get started.</h2>
+	<h5>First let's start by cloning this <a href="https://github.com/katrinaezis/shepherd_demo">repo</a></h5>
+	<hr>
+	<h6>Okay, you got that?</h6>
+	<h6>Let's get to it then!</h6>
+	<h5>Initializing Shepherd</h5>
+	<p>This is the <code>Panel</code> constructor:</p>
+	<pre><code>function Panel(element, canClose, closeHandler) {
+	  this.element = element;
+	  this.canClose = canClose;
+	  this.closeHandler = function () { if (closeHandler) closeHandler() };
+	}</code></pre>
+</div>
