--- a/templates/intro.html
+++ b/templates/intro.html
@@ -1,38 +1,37 @@
 <!-- Introduce us. Introduce shepherd. Why is shepherd useful.
 	Live demo of little tool tips.
-	Julian - Feel fucking lucky I've done so much of this part for you.
-	Biiiitch. -->
+	Julian -->
 <div id="header" class="container">
-	<h1>Sup guys</h1>
-	<h3>Today we're going to teach you some really cool stuff</h3>
+	<h1 id="shepherd-intro">Sup guys</h1>
+	<h3>Today we're going to teach you all about Shepherd</h3>
 	<h5>Now you probably already have a couple questions.</h5>
 	<h5>Like, who are these people? What are they going to teach me? When can I go eat breakfast?</h5>
 	<h5>Let's answer those questions...</h5>
 </div>
 <div id="aboutUs" class="container marketing">
 	<div class="row">
-		<div class="col-xs-3 eachSec eachSec">
+		<div class="col-xs-3 eachSec">
 			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/katrina.jpg">
 			<h2>Katrina</h2>
 			<div>Hello I'm Katrina</div>
 		</div>
 		<div class="col-xs-3 eachSec">
 			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/julian.jpg">
-			<h2>Katrina</h2>
+			<h2>Julian</h2>
 			<div>Hello I'm Katrina</div>
 		</div>
 		<div class="col-xs-3 eachSec">
 			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/simon.jpg">
-			<h2>Katrina</h2>
+			<h2>Simon</h2>
 			<div>Hello I'm Katrina</div>
 		</div>
 		<div class="col-xs-3 eachSec">
 			<img class="img-circle aboutImg" src="img/james.jpg">
-			<h2>Katrina</h2>
+			<h2>James</h2>
 			<div>Hello I'm Katrina</div>
 		</div>
 	</div>
-<div id="aboutUs" class="container">
+<!-- <div id="aboutUs" class="container">
 	<div class="featurette aboutOne">
 		<img class="featurette-image pull-left aboutImg" src="img/katrina.jpg">
 		<h2 class="featurette-heading">Katrina</h2>
@@ -56,8 +55,8 @@
 		<h2 class="featurette-heading">Simon</h2>
 		<div class="lead">Hello I'm Simon</div>
 	</div>
-</div>
-<div id="shepherdIntro" class="container">
+</div> -->
+<div class="container">
 	<h3>Alright, now that we've gotten that stuff out of the way let's get to what we're teaching. Shepherd.</h3>
 
 </div>
