--- a/templates/intro.html
+++ b/templates/intro.html
@@ -4,33 +4,37 @@
 <div id="header" class="container">
 	<h1 id="shepherd-intro">Sup guys</h1>
 	<h3>Today we're going to teach you all about Shepherd</h3>
-	<h5>Now you probably already have a couple questions.</h5>
-	<h5>Like, who are these people? What are they going to teach me? When can I go eat breakfast?</h5>
-	<h5>Let's answer those questions...</h5>
 </div>
 <div id="aboutUs" class="container marketing">
 	<div class="row">
-		<div class="col-xs-3 eachSec">
-			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/katrina.jpg">
+		<div class="col-md-3 eachSec">
+			<img class="img-circle aboutImg" src="img/katrina.jpg">
 			<h2>Katrina</h2>
-			<div>Hello I'm Katrina</div>
+			<div>Drinks tea</div>
 		</div>
-		<div class="col-xs-3 eachSec">
-			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/julian.jpg">
+		<div class="col-md-3 eachSec">
+			<img class="img-circle aboutImg" src="img/julian.jpg">
 			<h2>Julian</h2>
-			<div>Hello I'm Katrina</div>
+			<div>Has hair</div>
 		</div>
-		<div class="col-xs-3 eachSec">
-			<img class="img-circle aboutImg" data-src="holder.js/140x140" alt="140x140" src="img/simon.jpg">
+		<div class="col-md-3 eachSec">
+			<img class="img-circle aboutImg" src="img/simon.jpg">
 			<h2>Simon</h2>
-			<div>Hello I'm Katrina</div>
+			<div>Was a drill sergeant in the Korean military</div>
 		</div>
-		<div class="col-xs-3 eachSec">
+		<div class="col-md-3 eachSec">
 			<img class="img-circle aboutImg" src="img/james.jpg">
 			<h2>James</h2>
-			<div>Hello I'm Katrina</div>
+			<div>Is part of a longboard crew</div>
 		</div>
 	</div>
+</div>
 <div class="container">
-	<h3>Alright, now that we've gotten that stuff out of the way let's get to what we're teaching. Shepherd.</h3>
+	<h3>Alright, now that we've gotten that stuff out of the way let's get to Shepherd.</h3>
+</div>
+<div class="separate light-blue darken-2">
+	
+</div>
+<div>
+	<h2 class="text-center">What is Shepherd?</h2>
 </div>
