--- a/templates/intro.html
+++ b/templates/intro.html
@@ -2,8 +2,8 @@
 	Live demo of little tool tips.
 	Julian -->
 <div id="header" class="container">
-	<h1 id="shepherd-intro">Sup guys</h1>
-	<h3>Today we're going to teach you all about Shepherd</h3>
+	<h2>Today we're going to teach you about Shepherd</h2>
+	<h3>But first...</h3>
 </div>
 <div id="aboutUs" class="container marketing">
 	<div class="row">
