--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,11 @@
 
 html {
     font-family: 'Raleway', sans-serif !important;
-  }
+}
+
+#aboutUs {
+	margin-top: 20px;
+}
 
 .aboutImg {
 	height: 200px;
