--- a/templates/intro.html
+++ b/templates/intro.html
@@ -5,6 +5,7 @@
 	<h2>Today we're going to teach you about Shepherd</h2>
 	<h3>But first...</h3>
 </div>
+
 <div id="aboutUs" class="container marketing">
 	<div class="row">
 		<div class="col-md-3 eachSec">
@@ -15,7 +16,7 @@
 		<div class="col-md-3 eachSec">
 			<img class="img-circle aboutImg" src="img/julian.jpg">
 			<h2>Julian</h2>
-			<div>Has hair</div>
+			<div>Has some hair</div>
 		</div>
 		<div class="col-md-3 eachSec">
 			<img class="img-circle aboutImg" src="img/simon.jpg">
@@ -29,12 +30,28 @@
 		</div>
 	</div>
 </div>
+
 <div class="container">
-	<h3>Alright, now that we've gotten that stuff out of the way let's get to Shepherd.</h3>
+	<h3>Alright, now that we've gotten that stuff out of the way, let's get to Shepherd.</h3>
 </div>
-<div class="separate light-blue darken-2">
-	
+
+<div class="separate light-blue lighten-1">
+	<h2 class="text-center what-shep-title">What is Shepherd?</h2>
+	<div class="col-md-4 what-shep">
+		<img class="shep-icon" src="img/javascript.png">
+		<h4>JavaScript Library</h4>
+	</div>
+	<div class="col-md-4 what-shep">
+		<img class="shep-icon" src="img/tether.png">
+		<h4>Uses Tether</h4>
+	</div>
+	<div class="col-md-4 what-shep">
+		<img class="shep-icon" src="img/guide.png">
+		<h4>Guides Users</h4>
+	</div>
 </div>
-<div>
-	<h2 class="text-center">What is Shepherd?</h2>
+
+<div class="container">
+	<h2 class="text-center">But what does it look like?</h2>
+	<a class="waves-light btn-large light-blue darken-2" ng-click="startTour()">Take a Look</a>
 </div>
