adding the demo

--- a/templates/intro.html
+++ b/templates/intro.html
@@ -55,3 +55,6 @@
 	<h2 class="text-center">But what does it look like?</h2>
 	<a class="waves-light btn-large light-blue darken-2" ng-click="startTour()">Take a Look</a>
 </div>
+<div class="light-blue lighten-1 separate" ng-show="canshow > 0">
+	<h1 id="thing">Look at all of these objects!!!</h1>
+</div>
