--- a/templates/one.html
+++ b/templates/one.html
@@ -4,17 +4,50 @@
 	all shepherd links included and a few divs.
 	Also put js, css and other needed files.
 	Katrina -->
-<div id="gettingStarted" class="container">
-	<h2>Alright! Let's get started.</h2>
-	<h5>First let's start by cloning this <a href="https://github.com/katrinaezis/shepherd_demo">repo</a></h5>
-	<hr>
-	<h6>Okay, you got that?</h6>
-	<h6>Let's get to it then!</h6>
-	<h5>Initializing Shepherd</h5>
-	<p>This is the <code>Panel</code> constructor:</p>
-	<pre><code>function Panel(element, canClose, closeHandler) {
-	  this.element = element;
-	  this.canClose = canClose;
-	  this.closeHandler = function () { if (closeHandler) closeHandler() };
-	}</code></pre>
+<div id="gettingStarted">
+	<div id="go">
+		<h2>Alright! Let's get started.</h2>
+		<h5>First let's start by cloning this <a href="https://github.com/katrinaezis/shepherd_demo" target="_blank">repo</a></h5>
+	</div>
+	<div id="gotThat" class="card-panel light-blue darken-2 white-text text-center"> 
+		<h4>Okay, you got that?</h4>
+		<h5>Let's get to it then!</h5>
+	</div>
+	<div id="lesson" class="container">
+		<div id="includes">
+			<h3>Include in HTML</h3>
+			<h5>You can either <a href="http://github.hubspot.com/shepherd/" target="_blank">download</a> the files directly on your machine, or use CDN links.</h5>
+			<h6>(For this demonstration we've opted to use CDN links, these are on your index.html page.)</h6>
+			<pre><code class="language-html">		
+&lt;link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/shepherd/1.3.0/css/shepherd-theme-arrows.css" /&gt;
+&lt;script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.1.1/js/tether.min.js"&gt;&lt;/script&gt;
+&lt;script src="https://cdnjs.cloudflare.com/ajax/libs/shepherd/1.3.0/js/shepherd.min.js"&gt;&lt;/script&gt;
+			</code></pre>
+		</div>
+		<div id="init">
+			<h3>Initializing Shepherd</h3>
+			<h5>Start using Shepherd</h5>
+			<!-- <p>This is the <code>Panel</code> constructor:</p> -->
+			<pre><code class="language-javascript">
+var tour;
+tour = new Shepherd.tour({
+	defaults: {
+		classes: 'shepherd-theme-arrows',
+		scrollTo: true
+	}
+});
+			</code></pre>
+			<h6 id="explain">Explanation: You create a new tour variable. Then you initialize a new Shepherd tour object and save it to that tour variable. The <code>defaults</code> that you specify will be used across all of your Shepherd steps, unless overwritten later. The class <code>'shepherd-theme-arrow'</code> is one of the default Shepherd themes we can apply.</h6>
+		</div>
+		<div id="example">
+			<h3>Let's practice!</h3>
+			<h5>Start by initializing Shepherd in your main.js file</h5>
+			<h6>(These are the tasks you should be completing)</h6>
+			<pre><code class="language-javascript">
+&#47&#47 Start by initializing a new shepherd tour
+
+ 		&#47&#47 Set it's defaults to include the class of 'shepherd-theme-arrows'
+			</code></pre>
+		</div>
+	</div>
 </div>
