--- a/templates/intro.html
+++ b/templates/intro.html
@@ -36,6 +36,7 @@
 </div>
 
 <div class="separate light-blue lighten-1">
+	<!-- I'd reccomend maybe trying light-blue accent-3 or accent-4 here if you want to use a different blue -->
 	<h2 class="text-center what-shep-title">What is Shepherd?</h2>
 	<div class="col-md-4 what-shep">
 		<img class="shep-icon" src="img/javascript.png">
