--- a/templates/intro.html
+++ b/templates/intro.html
@@ -42,20 +42,62 @@
 		<h4>JavaScript Library</h4>
 	</div>
 	<div class="col-md-4 what-shep">
-		<img class="shep-icon" src="img/tether.png">
-		<h4>Uses Tether</h4>
-	</div>
-	<div class="col-md-4 what-shep">
 		<img class="shep-icon" src="img/guide.png">
 		<h4>Guides Users</h4>
 	</div>
+	<div class="col-md-4 what-shep">
+		<img class="shep-icon" src="img/tether.png">
+		<h4>Uses Tether</h4>
+	</div>
 </div>
 
-<div class="container separate">
-	<h2 class="what-shep-title">But what does it look like?</h2>
+<div class="container">
+	<div>
+		<h2 class="what-shep-title">Really briefly: What is Tether?</h2>
+		<h4>A JavaScript Library that simplifies making absolutely positioned elements stay next to other elements on the page.</h4>
+		<!-- The element to be moved is called the 'element'. The element in the page it's to be attached to is called the 'target'. -->
+		<img id="tether-screenshot" src="img/tether-screenshot.png">
+		<h4 class="text-center">Other JavaScript Libraries that use Tether</h4>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<img class="gif-icon" ng-src="{{tooltipUrl}}" ng-mouseenter="changeTooltipGif()" ng-mouseleave="changeTooltipBack()">
+			<a href="http://github.hubspot.com/tooltip/docs/welcome/" target="_blank"><h5 class="gif-text">Tooltip</h5></a>
+			<h6 class="gif-text">"Styleable tooltips built on Tether"</h6>
+			<p class="gif-text">(Hover to Preview)</p>
+		</div>
+		<div class="col-md-4">
+			<img class="gif-icon" ng-src="{{selectUrl}}" ng-mouseenter="changeSelectGif()" ng-mouseleave="changeSelectBack()">
+			<a href="http://github.hubspot.com/select/docs/welcome/" target="_blank"><h5 class="gif-text">Select</h5></a>
+			<h6 class="gif-text">"Styleable select elements built on Tether"</h6>
+			<p class="gif-text">(Hover to Preview)</p>
+		</div>
+		<div class="col-md-4">
+			<img class="gif-icon" ng-src="{{dropUrl}}" ng-mouseenter="changeDropGif()" ng-mouseleave="changeDropBack()">
+			<a href="http://github.hubspot.com/drop/docs/welcome/" target="_blank"><h5 class="gif-text">Drop</h5></a>
+			<h6 class="gif-text">"The fast and capable dropdown library"</h6>
+			<p class="gif-text">(Hover to Preview)</p>
+		</div>
+	</div>
+</div>
+
+<div class="light-blue accent-3 separate">
+	<h2 class="what-shep-title">So, what does Shepherd look like?</h2>
 	<a class="waves-light btn-large light-blue darken-2" ng-click="startTour()">Take a Look</a>
 </div>
-<div class="light-blue accent-3 separate" ng-show="canshow > 0" ng-animate="{show: 'show-animation', hide: 'hide-animation'}">
+
+<div class="separate animated fadeInDown" ng-show="canshow > 0">
 	<h1 id="thing">Look at all of these objects!!!</h1>
+	<div class="row">
+		<div class="col-md-4">
+			<h1>1</h1>
+		</div>
+		<div class="col-md-4">
+			<h1>2</h1>
+		</div>
+		<div class="col-md-4">
+			<h1>3</h1>
+		</div>
+	<div>
 </div>
 
