added css dividers

--- a/css/main.css
+++ b/css/main.css
@@ -138,3 +138,12 @@ pre {
 	display: block;
 	margin: auto;
 }
+
+/*STYLE FOR TWO.HTML
+---------------------------------------------------------------------------*/
+
+/*STYLE FOR THREE.HTML
+---------------------------------------------------------------------------*/
+
+/*STYLE FOR FOUR.HTML
+---------------------------------------------------------------------------*/
