--- a/css/main.css
+++ b/css/main.css
@@ -84,10 +84,10 @@ a:hover, a:visited {
 	text-align: center;
 }
 
-/*angular animations
-https://code.angularjs.org/1.1.5/docs/api/ng.directive:ngShow#animations
-http://www.yearofmoo.com/2013/04/animation-in-angularjs.html#animating-ng-show-ng-hide*/
-
+.animated {
+	height: 300px;
+	text-align: center;
+}
 
 
 
