--- a/templates/intro.html
+++ b/templates/intro.html
@@ -35,19 +35,21 @@
 	<h3>Alright, now that we've gotten that stuff out of the way, let's get to Shepherd.</h3>
 </div>
 
-<div class="separate light-blue accent-3">
+<div class="light-blue accent-3">
 	<h2 class="what-shep-title">What is Shepherd?</h2>
-	<div class="col-md-4 what-shep">
-		<img class="shep-icon" src="img/javascript.png">
-		<h4>JavaScript Library</h4>
-	</div>
-	<div class="col-md-4 what-shep">
-		<img class="shep-icon" src="img/guide.png">
-		<h4>Guides Users</h4>
-	</div>
-	<div class="col-md-4 what-shep">
-		<img class="shep-icon" src="img/tether.png">
-		<h4>Uses Tether</h4>
+	<div class="container row">
+		<div class="col-md-4 what-shep">
+			<img class="shep-icon" src="img/javascript.png">
+			<h4>JavaScript Library</h4>
+		</div>
+		<div class="col-md-4 what-shep">
+			<img class="shep-icon" src="img/guide.png">
+			<h4>Guides Users</h4>
+		</div>
+		<div class="col-md-4 what-shep">
+			<img class="shep-icon" src="img/tether.png">
+			<h4>Uses Tether</h4>
+		</div>
 	</div>
 </div>
 
@@ -81,22 +83,26 @@
 	</div>
 </div>
 
-<div class="light-blue accent-3 separate">
+<div class="light-blue accent-3">
 	<h2 class="what-shep-title">So, what does Shepherd look like?</h2>
 	<a class="waves-light btn-large light-blue darken-2" ng-click="startTour()">Take a Look</a>
-</div>
-
-<div class="separate animated fadeInDown"> <!--ng-show="canshow > 0"-->
-	<div class="row">
-		<div class="numbers col-md-4">
+	<div class="row animated fadeInDown" ng-show="canshow > 0">
+		<div class="numbers col-md-4 right-align">
 			<h1 id="attach-one">1</h1>
 		</div>
-		<div id="attach-two" class="numbers col-md-4">
-			<h1>2</h1>
+		<div class="numbers col-md-4 center-align">
+			<h1 id="attach-two">2</h1>
 		</div>
-		<div id="attach-three" class="numbers col-md-4">
-			<h1>3</h1>
+		<div class="numbers col-md-4 left-align">
+			<h1 id="attach-three">3</h1>
 		</div>
-	<div>
+	</div>
+</div>
+<div class="container big-button">
+<a ui-sref="one">
+	<div id="done" class="card-panel light-blue darken-2">
+		<h3 class="text-center white-text">Ready to try it yourself?</h3>
+	</div>
+</a>
 </div>
 
