--- a/templates/one.html
+++ b/templates/one.html
@@ -4,7 +4,7 @@
 	all shepherd links included and a few divs.
 	Also put js, css and other needed files.
 	Katrina -->
-<div id="gettingStarted" autoscroll="true">
+<div id="gettingStarted">
 	<div id="go">
 		<h2>Alright! Let's get started.</h2>
 		<h5>Go ahead and clone this <a href="https://github.com/katrinaezis/shepherd_demo" target="_blank">repo</a></h5>
