--- a/css/main.css
+++ b/css/main.css
@@ -154,11 +154,11 @@ pre {
 	padding: 2%;
 }
 
-li {
+#API li {
 	list-style-type: circle !important;
 }
 
-ul {
+#API ul {
 	padding-left: 5%;
 }
 
