styling four.html

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ footer.page-footer {
 /*STYLE FOR INTRO.HTML
 ---------------------------------------------------------------------------*/
 
-#firsttext {
+.firsttext {
 	margin-top: 80px;
 }
 
