--- a/templates/four.html
+++ b/templates/four.html
@@ -1,6 +1,6 @@
 <div id="API">
 	<div id="header" class="container">
-		<h2>The API</h2>
+		<h2 class="firsttext">The API</h2>
 		<p>Shepherd provides an extensive API and documentation that explains it's behavior. Let's go through some useful calls.</p>
 	</div>
 	<div id="tourInstant" class="container">
