--- a/templates/intro.html
+++ b/templates/intro.html
@@ -2,7 +2,7 @@
 	Live demo of little tool tips.
 	Julian -->
 <div id="header" class="container">
-	<h2 id="firsttext">Today we're going to teach you about Shepherd</h2>
+	<h2 class="firsttext">Today we're going to teach you about Shepherd</h2>
 	<h3>But first...</h3>
 </div>
 
