--- a/templates/four.html
+++ b/templates/four.html
@@ -1,7 +1,7 @@
 <div id="API">
 	<div id="header" class="container">
 		<h2 class="firsttext">The API</h2>
-		<p>Shepherd provides an extensive API and documentation that explains it's behavior. Let's go through some useful calls.</p>
+		<h5>Shepherd provides an extensive API and documentation that explains it's behavior. Let's go through some useful calls.</h5>
 	</div>
 	<div id="tourInstant" class="container">
 		<h4>Tour Instances</h4>
