--- a/templates/intro.html
+++ b/templates/intro.html
@@ -101,7 +101,7 @@
 <div class="container">
 </div>
 
-<div class="container big-button">
+<div class="container big-button" ng-show="canshow > 0">
 <a ui-sref="one">
 	<div id="done" class="card-panel light-blue darken-2">
 		<h3 class="text-center white-text">Ready to try it yourself?</h3>
