--- a/templates/intro.html
+++ b/templates/intro.html
@@ -98,14 +98,16 @@
 	</div>
 </div>
 
-<div class="container">
+<div class="container" ng-show="canshow > 0">
+	<h3>Unfortunately...</h3>
+	<h5>Creating a backdrop to prevent clicking on anything besides the Shepherd box is difficult. <a href="http://github.hubspot.com/shepherd/docs/welcome/" target="_blank">Example</a></h5>
+	<a class="waves-light btn-large light-blue darken-2" ng-click="countUp()">Got it</a>
 </div>
-
-<div class="container big-button" ng-show="canshow > 0">
-<a ui-sref="one">
-	<div id="done" class="card-panel light-blue darken-2">
-		<h3 class="text-center white-text">Ready to try it yourself?</h3>
-	</div>
-</a>
+<div class="container big-button" ng-show="nextPage > 0">
+	<a ui-sref="one">
+		<div id="done" class="card-panel light-blue darken-2">
+			<h3 class="text-center white-text">Ready to try it yourself?</h3>
+		</div>
+	</a>
 </div>
 
