demo.js not main.js

--- a/templates/one.html
+++ b/templates/one.html
@@ -43,7 +43,7 @@ tour = new Shepherd.tour({
 		<hr>
 		<div id="example">
 			<h3>Let's practice!</h3>
-			<h5>Start by initializing Shepherd in your main.js file</h5>
+			<h5>Start by initializing Shepherd in your demo.js file</h5>
 			<h6>(These are the tasks you should be completing)</h6>
 			<pre><code class="language-javascript">
 &#47&#47 Start by initializing a new shepherd tour
