--- a/templates/two.html
+++ b/templates/two.html
@@ -1,1 +1,121 @@
+
 <!-- Creating one step. Start tour. Simon -->
+
+<div id="first">
+	<a name="zeroStep"></a>
+	<div id="zeroStep" class="container">
+		<h4><br><br><br><br><br></h4>
+		<h2>Let's start creating a tour!</h2>
+		<a class="btn-lg" href="#/two#firstStep">Next</a>
+	</div>
+</div>
+
+<div id="first">
+	<a name="firstStep"></a>
+	<div id="firstStep" class="container">
+		<h4><br><br><br></h4>
+		<h4>First, we created a new "tour instance" for our tour.</h4>
+		<p>&nbsp;&nbsp;1. You create a Tour object for each tour you'd like to create.<br>&nbsp;&nbsp;2. Tour's constructor accepts a hash of options</p>
+		<img src="img/step1.png" />
+		<div class="row">
+			<div class="col-xs-6"> 
+			<a class="btn btn-info btn-block" href="#/two#zeroStep">BACK</a></div>
+			<div class="col-xs-6">
+			<a class="btn btn-info btn-block" href="#/two#secondStep">NEXT</a></div>
+		</div>
+	</div>
+</div>
+
+<div id="first">
+	<a name="secondStep"></a>
+	<div id="secondStep" class="container">
+		<p><br><br><br></p>
+		<h4>Next, let's take a look at "Tour Methods"</h4>
+		<img src="img/tourMethods.png">
+		<div class="row">
+			<div class="col-xs-6"> 
+			<a class="btn btn-info btn-block" href="#/two#firstStep">BACK</a></div>
+			<div class="col-xs-6">
+			<a class="btn btn-info btn-block" href="#/two#thirdStep">NEXT</a></div>
+		</div>
+	</div>
+</div>
+
+<div id="first">
+	<a name="thirdStep"></a>
+	<div id="thirdStep" class="container">
+	<h3><br><br></h3>
+	<h4>Next, let's take a look at different step "Options"</h4>
+	<img src="img/stepOptions.png">
+		<div class="row">
+			<div class="col-xs-6"> 
+			<a class="btn btn-info btn-block" href="#/two#secondStep">BACK</a></div>
+			<div class="col-xs-6">
+			<a class="btn btn-info btn-block" href="#/two#fourthStep">NEXT</a></div>
+		</div>
+	</div>
+</div>
+
+<div id="first">
+	<a name="fourthStep"></a>
+	<div id="fourthStep" class="container">
+		<h4><br><br><br><br></h4>
+		<h4>Now, let's add to our steps.</h4>
+		<img src="img/step2.png">
+		<div class="row">
+			<div class="col-xs-6"> 
+			<a class="btn btn-info btn-block" href="#/two#thirdStep">BACK</a></div>
+			<div class="col-xs-6">
+			<a class="btn btn-info btn-block" href="#/two#fifthStep">NEXT</a></div>
+		</div>
+	</div>
+</div>
+
+<div id="first">
+	<a name="fifthStep"></a>
+	<div id="fifthStep" class="container">
+		<h4><br><br><br><br></h4>
+		<h4>Lastly, to start the tour, just call start on your Tour instance!</h4>
+		<img src="img/step3.png">
+		<div class="row">
+			<div class="col-xs-6"> 
+			<a class="btn btn-info btn-block" href="#/two#fourthStep">BACK</a></div>
+			<div class="col-xs-6">
+			<a class="btn btn-info btn-block" href="#/two#sixthStep">NEXT</a></div>
+		</div>
+	<a id="redButton" class="btn-floating btn-large waves-effect waves-light red" ng-click="startTour()"><i class="material-icons">YO</i></a>
+	</div>
+</div>
+
+
+
+<div id="first">
+	<a name="sixthStep"></a>
+	<div id="sixthStep" class="container">
+		<h4><br></h4>
+		<h4>Now, it's time to practice!</h4>
+		<p>&nbsp;&nbsp;1. We will create our first step.</p>
+		<p>&nbsp;&nbsp;2. Create a new step called "myStep" and give some options.</p>
+		<p>&nbsp;&nbsp;3. Let the tour begin!!</p>
+		<img src="img/step4.png">
+		<div class="row">
+			<div class="col-xs-6"> 
+			<a class="btn btn-info btn-block" href="#/two#fifthStep">BACK</a></div>
+			<div class="col-xs-6">
+			<a class="btn btn-info btn-block" href="#/two#seventhStep">NEXT</a></div>
+		</div>
+	</div>
+</div>
+
+
+<a ui-sref="three">
+	<div id="done" class="card-panel light-blue darken-2">
+		<h3 class="text-center white-text">Reasonable?</h3>
+		<h5 class="text-center white-text">Well, let's keep move on!</h5>
+	</div>
+</a>
+<a name="seventhStep"></a>
+
+</div>
+</div>
+
