--- a/css/main.css
+++ b/css/main.css
@@ -144,6 +144,78 @@ pre {
 
 /*STYLE FOR TWO.HTML
 ---------------------------------------------------------------------------*/
+#first {
+	background-image: url(../img/logo.png);
+	background-size: cover;
+  	width: 100vw;
+  	height: 100vh;
+}
+#zeroStep h2 {
+	padding-bottom: 50px;
+}
+#zeroStep {
+	text-align: center;
+}
+#firstStep img {
+	width: 100%;
+	padding-bottom: 5%;
+}
+#firstStep p {
+	font-size: 20px;
+}
+#secondStep img {
+	width: 90%;
+	padding-bottom: 3%;
+}
+#thirdStep img {
+	width: 90%;
+	padding-bottom: 3%;
+}
+#fourthStep img {
+	width: 100%;
+	padding-bottom: 20px;
+}
+#fifthStep img {
+	width: 100%;
+	padding-bottom: 20px;
+}
+#fifthStep p {
+	text-align: center;
+}
+#redButton .btn-large {
+	position: absolute;
+}
+#sixthStep img {
+	width: 100%;
+	padding-bottom: 20px;
+}
+#sixthStep p {
+	font-size: 15px;
+	padding: 0;
+	margin: 0;
+}
+#first h5 {
+	text-align: center;
+}
+#done {
+	text-align: center;
+	border-radius: 10px;
+	width: 80%;
+	margin:0 auto;
+}
+#done h3 {
+	text-decoration: none !important;
+}
+#done h5 {
+	text-decoration: none !important;
+}
+a {
+	color: white;
+	text-decoration: none;
+	font-style: none;
+	background-color: #0287CF !important;
+}
+
 
 /*STYLE FOR THREE.HTML
 ---------------------------------------------------------------------------*/
@@ -170,8 +242,6 @@ pre {
 #API ul {
 	padding-left: 5%;
 }
-
-
 
 
 
